MyMap2 added to onLists

--- a/en/OnLists.ipynb
+++ b/en/OnLists.ipynb
@@ -52,6 +52,15 @@
    },
    "outputs": [],
    "source": [
+    "let myMap2 (f:'a -> 'b -> 'c) (xs: list<'a>) (ts: list<'b>) = \n",
+    "    let rec cata (f:'a -> 'b -> 'c) (xs: list<'a>) (ts: list<'b>) =\n",
+    "        match xs,ts with \n",
+    "            | [],[] -> []\n",
+    "            | [], _ -> []  // return some error\n",
+    "            | _,[] -> []   // return some error \n",
+    "            | x::xs,t::ts -> f x t :: cata f xs ts \n",
+    "    cata f xs ts     \n",
+    "\n",
     "let myIndexed (xs: list<'a>) = \n",
     "    ([0..(xs.Length - 1)], xs)\n",
     "        ||> List.map2 (fun i t -> (i,t))  // This is List.zip"
