Added Python examples

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -18,13 +18,45 @@
     "\n",
     "F\\#, as every other computer language, has it own syntax and peculiarities that one needs to understand. But learning the functional paradigm requires to set aside a few concepts that one is very fond of and uses in everyday coding in imperative or object oriented languages. \n",
     "\n",
-    "\n",
-    "This is not a personal infatuation from functional programmers, and has profound roots in the very origin of computing science.\n",
-    "\n",
-    "> In the beginning, there where two mutually equivalent approaches to formal computing, one developed by Alan Turing with his [computing machine](https://londmathsoc.onlinelibrary.wiley.com/doi/epdf/10.1112/plms/s2-42.1.230), while the other one was worked out by Alonzo Church with his [lambda calculus](https://www.jstor.org/stable/2371045?origin=crossref&seq=10#metadata_info_tab_contents). \n",
+    "> This difference has profound roots at the very origin of computing science.\n",
+    "> In the beginning, there where two mutually equivalent approaches to formal computing, one developed by Alan Turing with his [computing machine](https://londmathsoc.onlinelibrary.wiley.com/doi/epdf/10.1112/plms/s2-42.1.230), while the other one was worked out by Alonzo Church with his [lambda calculus](https://www.jstor.org/stable/2371045?origin=crossref&seq=10#metadata_info_tab_contents). Both approaches evolved in parallel, and gave rise to different branches of programming styles. \n",
+    "> Functional programming is by no means new. LISP, the first functional programming language appeared in 1958, just a year shy of its \n",
+    "> imperative counterpart, Fortran.\n",
     "> \n",
-    "\n"
+    "> In a very loose sense, learning a functional language is like travelling in time, going back through the imperative branch of  programming and taking the other exit in the roundabout.\n",
+    "\n",
+    "Even though you do not finally adopt the functional paradigm, adding a new language style to your assets will give you the experience to revisit old programming habits with new eyes, giving a deeper understanding, and more fine tuning to your code. You will become a better programmer, definetly!\n",
+    "\n",
+    "F\\# is one of the languages provided by the .NET framework (together with C# and Visual Basic). As such, F\\# is tighly integrated with all the tools and libraries that .NET provides. In this sense, and __only for pedagogical purposes__, I will view .NET as the set of libraries that one can use to enhance your code. In other words, I will stay away from using them, and focusing in the core features of F\\# as a functional language. From Web programming to Machine Learning, from databases to windows, .NET has everything you need to make your programming a better experience, once you know the core features F\\# provides. \n",
+    "\n",
+    "> If you are a C# programmer, you will probably get a better mileage going into some of the excellent resources of F\\# for C# coders, such as [Get programming with F\\#](https://www.manning.com/books/get-programming-with-f-sharp#:~:text=about%20the%20book-,Get%20Programming%20with%20F%23%3A%20A%20guide%20for%20.,of%20functional%20programming%20in%20F%23.) \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "source": [
+    "## Tools\n",
+    "\n",
+    "All this series is written as [Jupyter notebooks](https://jupyter.org/). You can grab them at [this github repository](https://github.com/fcolavecchia/fp-course). Instructions on how to set up F\\# as a Notebook kernel can be found __[here]__. \n",
+    "\n",
+    "This series is about the fundamentals of F\\# programming, and none of the examples need even to install F\\#. You can simply code along in your web browser of your choice, heading to the [Fable REPL](https://fable.io/repl/). Just write your code in the left panel, click the usual play button (or Alt+Enter), and there you go, you are programming in F\\#!. \n",
+    "\n",
+    "You can also install the F\\# language and use your everyday editor, see instructions __[here]__. \n",
+    "\n",
+    "Visual Studio Code has a wonderful extension called Ionide to work with F\\#. I personally use JetBrains Rider for my daily coding.\n",
+    "\n",
+    "> You can also install Visual Studio for Windows or MacOS, if you are familiar with that tool. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -49,14 +81,94 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Functions everywhere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let foo a b =\n",
+    "    a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "foo 2 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (1,5)-(1,12) typecheck error This expression was expected to have type\n    'int'    \nbut here has type\n    'string'    \ninput.fsx (1,13)-(1,18) typecheck error This expression was expected to have type\n    'int'    \nbut here has type\n    'string'    ",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (1,5)-(1,12) typecheck error This expression was expected to have type\n",
+      "    'int'    \n",
+      "but here has type\n",
+      "    'string'    \n",
+      "input.fsx (1,13)-(1,18) typecheck error This expression was expected to have type\n",
+      "    'int'    \n",
+      "but here has type\n",
+      "    'string'    "
+     ]
+    }
+   ],
+   "source": [
+    "foo \"John \" \"Doe\""
    ]
   },
   {
@@ -90,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -122,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -140,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -170,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -186,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -195,17 +307,7 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "3\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexOfAny \"zzabyycdxx\" ['z';'a'] |> printfn \"%A\"\n",
     "indexOfAny \"zzabyycdxx\" ['b';'y'] |> printfn \"%A\"\n",
@@ -214,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -223,17 +325,7 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "3\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexOfAny2 \"zzabyycdxx\" ['z';'a'] |> printfn \"%A\"\n",
     "indexOfAny2 \"zzabyycdxx\" ['b';'y'] |> printfn \"%A\"\n",
