Working with passing arguments in python

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -75,8 +75,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     ">> [A nice thread on reusability of binding names](https://github.com/dotnet/fsharp/issues/9900).\n",
     "\n",
     "\n",
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -107,8 +105,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like one can reuse the binding name in different cells, provided one runs in the current order. Same value on one cell are not allowed, though."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -119,29 +124,14 @@
    },
    "outputs": [],
    "source": [
-    "let foo a b =\n",
-    "    a + b"
+    "let foo (a:string) b =\n",
+    "    a + b\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "foo 2 3 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -153,22 +143,56 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "input.fsx (1,5)-(1,12) typecheck error This expression was expected to have type\n    'int'    \nbut here has type\n    'string'    \ninput.fsx (1,13)-(1,18) typecheck error This expression was expected to have type\n    'int'    \nbut here has type\n    'string'    ",
+     "evalue": "input.fsx (2,13)-(2,14) typecheck error This expression was expected to have type\n    'string'    \nbut here has type\n    'int'    \ninput.fsx (2,15)-(2,16) typecheck error This expression was expected to have type\n    'string'    \nbut here has type\n    'int'    ",
      "output_type": "error",
      "traceback": [
-      "input.fsx (1,5)-(1,12) typecheck error This expression was expected to have type\n",
-      "    'int'    \n",
-      "but here has type\n",
+      "input.fsx (2,13)-(2,14) typecheck error This expression was expected to have type\n",
       "    'string'    \n",
-      "input.fsx (1,13)-(1,18) typecheck error This expression was expected to have type\n",
-      "    'int'    \n",
       "but here has type\n",
-      "    'string'    "
+      "    'int'    \n",
+      "input.fsx (2,15)-(2,16) typecheck error This expression was expected to have type\n",
+      "    'string'    \n",
+      "but here has type\n",
+      "    'int'    "
      ]
     }
    ],
    "source": [
-    "foo \"John \" \"Doe\""
+    "let d = foo \"John \" \"Doe\"\n",
+    "let d = foo 2 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let foo (a:int) b =\n",
+    "    a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let d = foo 2 3 "
    ]
   },
   {
@@ -202,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -234,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -252,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -282,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -298,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -307,7 +331,17 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "indexOfAny \"zzabyycdxx\" ['z';'a'] |> printfn \"%A\"\n",
     "indexOfAny \"zzabyycdxx\" ['b';'y'] |> printfn \"%A\"\n",
@@ -316,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -325,7 +359,17 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "indexOfAny2 \"zzabyycdxx\" ['z';'a'] |> printfn \"%A\"\n",
     "indexOfAny2 \"zzabyycdxx\" ['b';'y'] |> printfn \"%A\"\n",
