added some js code

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -350,6 +350,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "c is:5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "c is:5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: John Doe"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: John Doe"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: 5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "or maybe is: 5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#!js\n",
+    "// Function to compute the product of p1 and p2\n",
+    "function foo_js(a, b) {\n",
+    "  return a + b;\n",
+    "}\n",
+    "\n",
+    "// Sum \n",
+    "c = foo_js(3,2);\n",
+    "console.log('c is:'+c);\n",
+    "\n",
+    "// Concat\n",
+    "c = foo_js(\"John \",\"Doe\")\n",
+    "console.log(\"or maybe is: \"+c);\n",
+    "\n",
+    "// Or something else\n",
+    "c = foo_js(true,true)\n",
+    "console.log(\"or maybe is: \"+c)\n",
+    "\n",
+    "// or something weirder \n",
+    "c = foo_js(true,4)\n",
+    "console.log(\"or maybe is: \"+c)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
